coding-format-structure