@@ -1,9 +1,8 @@
 package com.ute.auction.converter;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
 
@@ -17,61 +16,82 @@ import com.ute.auction.entity.ProductEntity;
 @Component
 public class AuctionProductConverter {
 
-    private AuctionConverter auctionConverter;
-    private ProductConverter productConverter;
-    
-    @Autowired
-    public void setAuctionConverter(@Lazy AuctionConverter auctionConverter) {
-        this.auctionConverter = auctionConverter;
-    }
+    private final AuctionConverter auctionConverter;
+    private final ProductConverter productConverter;
 
-    @Autowired
-    public void setProductConverter(@Lazy ProductConverter productConverter) {
+    public AuctionProductConverter(@Lazy AuctionConverter auctionConverter, @Lazy ProductConverter productConverter) {
+        this.auctionConverter = auctionConverter;
         this.productConverter = productConverter;
     }
 
     public AuctionProductDTO toDTO(AuctionProductEntity entity) {
+        if (entity == null) {
+            return null;
+        }
+
         AuctionProductDTO auctionProductDTO = new AuctionProductDTO();
         auctionProductDTO.setAuction(toAuctionDTO(entity.getAuction()));
         auctionProductDTO.setProduct(toProductDTO(entity.getProduct()));
-        auctionProductDTO.setSlots(entity.getSlots());
+        auctionProductDTO.setSlot(entity.getSlot());
         auctionProductDTO.setStatus(entity.getStatus());
 
         return auctionProductDTO;
     }
 
     public AuctionProductEntity toEntity(AuctionProductDTO dto) {
+        if (dto == null) {
+            return null;
+        }
+
         AuctionProductEntity auctionProductEntity = new AuctionProductEntity();
         auctionProductEntity.setAuction(toAuctionEntity(dto.getAuction()));
         auctionProductEntity.setProduct(toProductEntity(dto.getProduct()));
-        auctionProductEntity.setSlots(dto.getSlots());
+        auctionProductEntity.setSlot(dto.getSlot());
         auctionProductEntity.setStatus(dto.getStatus());
 
         return auctionProductEntity;
     }
 
     public List<AuctionProductDTO> toDTOs(List<AuctionProductEntity> entities) {
-        return entities.stream().map(this::toDTO).collect(Collectors.toList());
+        if (entities == null) {
+            return new ArrayList<>();
+        }
+        return entities.stream().map(this::toDTO).toList();
     }
 
     public List<AuctionProductEntity> toEntities(List<AuctionProductDTO> dtos) {
-        return dtos.stream().map(this::toEntity).collect(Collectors.toList());
+        if (dtos == null) {
+            return new ArrayList<>();
+        }
+        return dtos.stream().map(this::toEntity).toList();
     }
 
     private ProductEntity toProductEntity(ProductDTO productDTO) {
+        if (productDTO == null) {
+            return null;
+        }
         return productConverter.toEntity(productDTO);
     }
 
     private AuctionEntity toAuctionEntity(AuctionDTO auctionDTO) {
+        if (auctionDTO == null) {
+            return null;
+        }
         return auctionConverter.toEntity(auctionDTO);
     }
 
     private ProductDTO toProductDTO(ProductEntity productEntity) {
+        if (productEntity == null) {
+            return null;
+        }
         return productConverter.toDTO(productEntity);
     }
 
     private AuctionDTO toAuctionDTO(AuctionEntity auctionEntity) {
+        if (auctionEntity == null) {
+            return null;
+        }
         return auctionConverter.toDTO(auctionEntity);
     }
-    
+
 }
